swen430as2/tests/valid/unions/UnionType_Valid_03.while
bool isInteger(int|null x) {
    if(x != null) {
      return true;
    } else {
      return false;
    }
}

void main() {
    assert isInteger(1);
    assert !isInteger(null);    
}

