swen430as2/tests/invalid/unions/UnionType_Invalid_6-TC01.while
int|null f(int|null|bool x) {
    return x;
}
